style: fixed alignment for posts

--- a/src/Components/Post.module.css
+++ b/src/Components/Post.module.css
@@ -81,4 +81,5 @@
 
 .content {
   line-height: 1.5;
+  text-align: left;
 }
